tests/paczka1/small_fuzzy/28905148.err
Error in line 1: t7x S695 10,5
Error in line 8: A2 A2 61,0
Error in line 11: A2 S231 40,2
Error in line 12: A2 A2 79,4
Error in line 16: A2 A2 250,1
